Fix overflowing genius reaction

--- a/app/assets/stylesheets/pages/solution-page.scss
+++ b/app/assets/stylesheets/pages/solution-page.scss
@@ -324,7 +324,7 @@
         }
         a {
             float:left;
-            padding:10px;
+            padding:10px 9px;
             color:#666;
             position:relative;
             .hover {
